--- a/CSS/charts.css
+++ b/CSS/charts.css
@@ -33,6 +33,7 @@
 
 .charts-desktop-nome-esquerdo.active {
     background: hsla(0,0%,100%,.1);
+    max-width: 243px;
     color: #fff;
     font-weight: 700;
 }
@@ -361,3 +362,265 @@ button {
     text-overflow: ellipsis;
     overflow: hidden;
 }
+
+.sessao_player_musica {
+    width: 100%;
+    height: 90px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background: var(--alpha-color);
+    backdrop-filter: blur(50px);
+    transition: 1s;
+}
+
+.sessao_player_musica .player-capa-album{
+    display: none;
+}
+
+.sessao_player_musica .player-barra-min-inicio {
+    color: white;
+    position: absolute;
+    margin-top: 10px;
+    left: 15px;
+}
+
+.sessao_player_musica .player-barra-min-fim {
+    color: white;
+    position: absolute;
+    margin-top: 15px;
+    right: 15px;
+}
+
+.sessao_player_musica .player-info-musica{
+    display: block;
+    margin-bottom: 0px;
+    margin-top: 15px;
+    margin-right: 80px;
+}
+
+
+.sessao_player_musica .player-nome-musica {
+    display: flex;
+    margin-bottom: 0px;
+    margin-top: 3px;
+    color: white;
+    margin-left: 600px;
+}
+
+.sessao_player_musica .player-nome-artista {
+    display: flex;
+    width: 40px;
+    margin-bottom: 10px;
+    font-size: 10pt;
+    cursor: pointer;
+    margin-left: 632px;
+}
+
+.player-tempo {
+    display: flex;
+    color: white;
+    font-size: 11pt;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+}
+
+.player-barra-tempo {
+    height: 6px;
+    width: 100%;
+    border: solid 1px #979797;
+    display: flex;
+}
+
+.player-barra-tempo progress {
+    height: 6px;
+    cursor: pointer;
+}
+
+.player-progress {
+    color: rgb(226, 226, 226);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 550px;
+    margin-right: 600px;
+    font-size: 12pt;
+}
+
+.player-progress i {
+    padding: 0px;
+    cursor: pointer;
+    display: none;
+}
+
+.player-progress i.active {
+    padding: 0px;
+    cursor: pointer;
+    display: inline;
+}
+
+.sessao_player_musica .slider-volume {
+    width: 188px;
+    height: 40px;
+    position: absolute;
+    right: 70px;
+    bottom: 10px;
+    border-radius: 20px;
+    transform: rotate(90deg);
+    background-color: var(--alpha-color);
+    overflow: hidden;
+    opacity: 0;
+    display: none;
+}
+
+.sessao_player_musica .slider-volume.active {
+    opacity: 1;
+    display: block;
+}
+
+.sessao_player_musica .icone-volume {
+    position: absolute;
+    right: 30px;
+}
+
+.sessao_player_musica .player-botao-voltar {
+    display: none;
+}
+
+/* Começo da Sessão Musica Ativa  */
+
+.sessao_player_musica .hide{
+    display: none;
+    opacity: 0;
+    transition: 1s;
+}
+
+.sessao_player_musica .hide{
+    display: block;
+    opacity: 1;
+}
+
+.sessao_player_musica.active{
+    width: 100%;
+    height: 100%;
+    padding-left: 50px;
+    padding-top: 50px;
+    padding-bottom: 0px;
+    display: flex;
+    flex-direction: column;
+}
+
+.sessao_player_musica.active .player-info-musica{
+    display: block;
+    margin-bottom: 0px;
+    
+}
+
+.sessao_player_musica.active .player-nome-musica {
+    display: flex;
+    font-size: 25pt;
+    color: white;
+    margin-left: 500px;
+}
+
+.sessao_player_musica.active .player-nome-artista {
+    display: flex;
+    margin-top: 20px;
+    font-size: 15pt;
+    color: white;
+    margin-left: 583px;
+}
+
+
+.sessao_player_musica.active .player-barra-tempo {
+    height: 10px;
+    width: 80%;
+    border: solid 1px #979797;
+    margin-top: 0px;
+    border-radius: 20px;
+    margin-left: 75px;
+    margin-bottom: 0;
+}
+
+.sessao_player_musica.active .player-barra-tempo progress {
+    height: 10px;
+    cursor: pointer;
+}
+
+.sessao_player_musica.active .player-progress {
+    color: rgb(226, 226, 226);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 435px;
+    margin-right: 595px;
+    margin-top: 20px;
+    margin-bottom: 0;
+    font-size: 20pt;
+}
+
+.sessao_player_musica.active .player-capa-album {
+    width: 95%;
+    display: flex;
+    justify-content: center;
+    margin-top: 39px;
+    margin-bottom: 20px;
+}
+
+.sessao_player_musica.active .player-capa-album img {
+    width: 500px;
+    height: 400px;
+    border-radius: 20px;
+}
+
+.sessao_player_musica.active .player-barra-min-inicio {
+    color: white;
+    position: absolute;
+    margin-top: 15px;
+    left: 130px;
+}
+
+.sessao_player_musica.active .player-barra-min-fim {
+    color: white;
+    position: absolute;
+    margin-top: 15px;
+    right: 190px;
+}
+
+.sessao_player_musica.active .player-botao-voltar {
+    color: white;
+    margin-top: 25px;
+    font-size: 20pt;
+    margin-bottom: 0;
+    left: 20px;
+    position: absolute;
+    display: flex;
+}
+
+.sessao_player_musica.active .slider-volume {
+    width: 188px;
+    height: 7px;
+    margin-right: 40px;
+    margin-bottom: 60px;
+    position: absolute;
+    right: 70px;
+    border-radius: 20px;
+    transform: rotate(180deg);
+    background-color: var(--alpha-color);
+    overflow: hidden;
+    opacity: 0;
+    display: none;
+}
+
+.slider-volume.active {
+    opacity: 1;
+    display: block;
+}
+
+.sessao_player_musica.active .icone-volume {
+    position: absolute;
+    right: 70px;
+}
+
+/* Fim da Sessão do Player de Musica Ativo  */
