--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,4 +1,6 @@
 /* Começo do Geral */
+@charset "UTF-8";
+
 body {
     font-family: sans-serif;
 	background-attachment: fixed;
@@ -9,8 +11,8 @@ body {
 }
 
 #bg_transparent {
-    background: url('../images//background.gif');
-    background-size: 100%;
+    background: url('../images//background.gif') no-repeat fixed;
+    background-size: cover;
     z-index: -9999;
 }
 
@@ -86,25 +88,32 @@ figure{
     width: 70%;
 }
 
-#title1 {
+.center {
+    width: 730px; 
+    margin-left: auto;
+    margin-right: auto; 
+    padding-top: 150px;
+}
+
+.title1 {
     color: white;
     font-family: 'Nasalization', sans-serif;
     font-size: 30pt;
-    text-align: center;
     margin-top: 190px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-#text1 {
+.text1 {
     color: rgb(255, 255, 255);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-align: center;
     font-size: 10pt;
     opacity: 80%;
 
 }
 
-#download_button {
-    margin: 10px 50px 50px 525px;
+.download_button {
     height: 60px;
     width: 260px;
     border: 1px solid #fff;
@@ -116,12 +125,11 @@ figure{
     outline: none;
     transition: all .2s;
     cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-left: 220px;
+    margin-right: 220px;
 }
 
-#download_button:hover {
+.download_button:hover {
     color: #ff0000 !important;
 	-webkit-transition: all 0.5s ease;
 	-moz-transition: all 0.5s ease;
@@ -187,7 +195,7 @@ figure{
     position: absolute;
     top: 45px;
     padding: 0;
-    left: 493px;
+    right: 325px;
     border-radius: 10px 10px 10px 10px;
     border: 1px solid white;
     z-index: 1;
@@ -209,6 +217,7 @@ figure{
 /* fim do sub-menu  */
 /* fim do menu  */
 
-/* Começo do Artistas */
-
-/* Fim do Artistas  */
+/* Começo do responsivo */
+@media only screen and (min-device-width: 900px) {
+    }
+/* Fim do responsivo  */
